<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.self.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="100dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/userTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/userName" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passTag"
            android:layout_toEndOf="@+id/userTag"
            android:focusedByDefault="false" />

        <TextView
            android:id="@+id/passTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userTag"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passWord"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_toEndOf="@+id/passTag"
            android:focusedByDefault="false" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="30dp"
            android:onClick="onClickListener"
            android:text="@string/login" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="30dp"
            android:onClick="onClickListener"
            android:text="@string/signup" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
