<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.self.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="529dp">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="50dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="70dp"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:id="@+id/fnameTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/fname" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:paddingBottom="8dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lnameTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fnameTag"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/lname" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:paddingBottom="8dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/emailTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lnameTag"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/email" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:paddingBottom="8dp" />
                    </LinearLayout>
                    <!--
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/birthTag"
                        android:layout_below="@+id/emailTag">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/birthday" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/birthday"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/genderTag"
                        android:layout_below="@+id/birthTag">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:padding="5dp"
                        android:text="@string/gender" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/gender"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/phoneTag"
                        android:layout_below="@+id/genderTag">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/phone" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/jtitleTag"
                        android:layout_below="@+id/phoneTag">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/jtitle" />
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/jtitle"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/countrytag"
                        android:layout_below="@+id/jtitleTag">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/country" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/country"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/cityTag"
                        android:layout_below="@+id/countrytag">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/city" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/city"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/stateTag"
                        android:layout_below="@+id/cityTag">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/state" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/state"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false" />
                    </LinearLayout>-->

                    <LinearLayout
                        android:id="@+id/uNameTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emailTag"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/userName" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/uNameCreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:paddingBottom="8dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cUNameTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/uNameTag"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/cUserName" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/cUName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:paddingBottom="8dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/passwordTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cUNameTag"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/password" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/passCreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:inputType="textPassword"
                            android:paddingBottom="8dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cPasswordTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/passwordTag"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/cPassword" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/cPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:inputType="textPassword"
                            android:paddingBottom="8dp" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/secondaryColor"
            android:onClick="onClickListener"
            android:text="@string/create" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
